<resources>
    <string name="app_name">haipp</string>
    <string name="lock_first_btn" formatted="false">Protection (% s)</string>
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
    <string name="lock_pattern_entered_header">Record pattern</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
    <string name="password_error_count">The pattern does not match. Please try again.</string>
    <string name="lock_draw_unlock_pattern">Draw the unlock pattern</string>
    <string name="lock_enter_pin_code">Enter a numeric password</string>
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
    <string name="num_create_text_01">Enter a 4-digit password to unlock</string>
    <string name="num_create_text_02">Enter again to confirm</string>
    <string name="num_create_text_03">Password does not match, please try again</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0 </string>
    <string name="password_short">Please enter at least 4 characters. </string>
    <string-array name="lock_time_array">
                
        <item>15 seconds</item>
                
        <item>30 seconds</item>
                
        <item>1 minute</item>
                
        <item>3 minutes</item>
                
        <item>5 minutes</item>
                
        <item>10 minutes</item>
                
        <item>30 minutes</item>
                
        <item>Immediately </item>
            
    </string-array>
    <string name="dialog_tip"> Haipp Lock need to get the \"Application Usage\" permission
    </string>
    <string name="shubham_tyagi">Shubham tyagi</string>
    <string name="github_https_github_com_subhamtyagi">GitHub:https://github.com/subhamtyagi</string>
    <string name="upstream_developer">Upstream Developer</string>
    <string name="up_stream_deve_name_espoir">Espoir</string>
    <string name="github_https_github_com_espoir_x">GitHub:https://github.com/EspoirX/AppLock</string>
    <string name="welcome_to_the_app_lock">Welcome to the Haipp lock</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="open">Open</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="show_pattern">Show pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="about_me">About Me</string>
    <string name="go_to_give_permission">Permit Permission</string>
    <string name="warning">Warning</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="take_a_photo">Intruder selfie</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="accessibility_service_name">App lock</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern_is_required">Pattern is required when the Locked Apps are opened</string>
    <string name="pattern_is_not_required">Pattern is not required when the Locked Apps opened</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="admin_receiver_status_disable_warning" />
    <string name="admin_receiver_status_enabled" />
    <string name="admin_receiver_status" />
    <string name="action_new_tab">New tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_copy">Copy link</string>
    <string name="action_forward">Forward</string>
    <string name="agent">User agent</string>
    <string name="home">Homepage</string>
    <string name="fullscreen">Full-screen mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="download">Download location</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable cookies</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore">Restore lost tabs on start</string>
    <string name="supported_browsers_title">Supported browsers</string>
    <string name="stock_browser">Stock browser</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history">Clear browser history</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_history_long_press">What would you like to do with this history item?</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="unknown_size">Unknown size</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player was not detected.\nPlease install Flash Player.</string>
    <string name="title_user_agent">User agent</string>
    <string name="title_download_location">Download location</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="title_clear_history">Clear history</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">New incognito tab</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch \'Turn Off USB Storage\' in the notification.</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="reading_mode">Reader mode</string>
    <string name="tabs">Tabs</string>
    <string name="dialog_tools_title">Page tools</string>
    <string name="update">Update</string>
    <string name="existingpass">Existing Password</string>
    <string name="newpass">New Password</string>
    <string name="cnewpass">Confirm New Password</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="set_geo_fence">Set geo fence</string>
    <string name="_1mile">1km</string>
    <string name="_10mile">10km</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agreement">Agreement</string>
    <string name="i_have_read_and_agreed_with_the">I have read and agreed with the</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Coniditons]]></string>
</resources>