<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bookmark_title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bookmark_back_button"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/action_back"
            android:scaleType="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_action_star"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_grid_margin"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="10dp"
            android:text="@string/action_bookmarks" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmark_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/action_page_tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/dialog_tools_title"
            android:scaleType="center"
            android:src="@drawable/ic_page_tools" />

        <ImageView
            android:id="@+id/action_add_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/action_add_bookmark"
            android:scaleType="center"
            app:srcCompat="@drawable/state_ic_bookmark" />

        <ImageView
            android:id="@+id/action_reading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/reading_mode"
            android:scaleType="center"
            android:src="@drawable/ic_action_reading" />
    </LinearLayout>
</LinearLayout>
