<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="GeoFence" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_6sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:text="@string/set_geo_fence"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_6sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@null"
                    android:hint="@string/name"
                    android:id="@+id/name"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_4sdp"
                app:cardElevation="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@null"
                    android:editable="false"
                    android:id="@+id/location"
                    android:hint="@string/location"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/range"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="@string/_1mile" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="end"
                    android:text="@string/_10mile" />

            </LinearLayout>

            <com.warkiz.widget.IndicatorSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:isb_indicator_color="#058586"
                app:isb_indicator_text_color="@color/white"
                app:isb_indicator_text_size="18sp"
                app:isb_max="10"
                app:isb_min="1"
                android:id="@+id/valrange"
                app:isb_only_thumb_draggable="false"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_thumb_color="#cfcfcf"
                app:isb_thumb_size="@dimen/_15sdp"
                app:isb_tick_marks_drawable="@mipmap/ic_launcher"
                app:isb_tick_marks_size="13dp"
                app:isb_tick_texts_color="@color/white"
                app:isb_tick_texts_size="@dimen/_12ssp"
                app:isb_track_background_color="#cfcfcf"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="#fcb13c"
                app:isb_track_progress_size="@dimen/_4sdp"
                tools:ignore="MissingClass" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1"
                    android:background="@color/yellowcolorapp"
                    android:gravity="center"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvReject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1"
                    android:background="@color/ligthcolorgray"
                    android:gravity="center"
                    android:text="@string/reject"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>