<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ChangepassBinding" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundoffcolor">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMAin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60sdp"
                android:src="@drawable/changepasslogo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/EditText_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/existingpass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditText_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textPassword"
                android:hint="@string/newpass"
                android:imeOptions="actionDone"
                android:maxLength="30" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cPassword"
                style="@style/EditText_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/cnewpass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/preloginButton"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/update"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButtonlogin"
                app:cornerRadius="@dimen/_8sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>